tests/errors/unbound-params.fil
comp Add[#W, #L]<G: 1>(
    @[G, G+#W] a: #W,
) -> () {}

comp main[#W, #L]<G: #M>(
    @[G, G+#K] a: #P,
) -> () where #W+#N+L > L+1 {
    a := new Add[#W, #J]<L+#N>(a);
}